[project]
name = "openrouter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ae8y2la", email = "aeylanaseer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
openrouter-agent = "openrouter_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
